--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ru-RU" itemscope itemtype="http://schema.org/WebSite" prefix="og: http://ogp.me/ns#">
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>Trip Companion</title>
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
